Edited CSS and made the background visible. Nav bar is fixed but not interactive. Logo is intended size.

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -7,12 +7,12 @@
 }
 
 .header{
-min-height: 100vh;
-width: 100%;
-background-image: linear-gradient(rgba(4,9,30,0.7),(rgba(167, 175, 207, 0.7)),url(Images\header.png);
-background-position: center;
-background-size: cover;
-position: relative;
+    min-height: 100vh;
+    width: 100%;
+    background-image: url('../Images/bop.png'),linear-gradient(rgba(154, 156, 167, 0.7),rgba(4,9,30,0.7));
+    background-position: center;
+    background-size: cover;
+    position: relative;
 }
 
 nav{
@@ -24,7 +24,7 @@ align-items: center;
 }
 
 nav img{
-  width: 140px;
+  width: 180px;
 
 }
 
@@ -36,14 +36,14 @@ nav img{
 .nav-links ul li{
   list-style: none;
   display: inline-block;
-  padding: 8px 12px;
+  padding: 12px 20px;
   position: relative;
 }
 
 .nav-links ul li a{
-  color:black;
+  color:rgb(0, 0, 0);
   text-decoration: none;
-  font-size:12px;
+  font-size:18px;
 }
 
 .nav-links ul li::after{
